# ReuleauxCoder

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  README.md  README_CN.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: .env.example  Dockerfile  README.md  config.host.yaml  docker-compose.yml  entrypoint.sh
docs/: command-single-file-registration-guide.md  hook-system.md  tool-approval-design.md  tool-approval-system.md  ui-event-system.md
reuleauxcoder/: __init__.py
reuleauxcoder-agent/: go.mod
reuleauxcoder-agent/cmd/reuleauxcoder-agent/: main.go
reuleauxcoder-agent/internal/client/: http.go
reuleauxcoder-agent/internal/protocol/: types.go
reuleauxcoder-agent/internal/runner/: runner.go
reuleauxcoder-agent/internal/tools/: execute.go
reuleauxcoder/app/: __init__.py
reuleauxcoder/compat/: __init__.py  config_migration.py
reuleauxcoder/domain/: __init__.py  approval.py  approval_engine.py  approval_preview.py
reuleauxcoder/infrastructure/: platform.py
reuleauxcoder/interfaces/: events.py  interactions.py  ui_registry.py  view_registration.py  view_registry.py
scripts/: build-peer-artifacts.sh
tests/: test_version.py
tests/compat/: test_config_migration.py
tests/domain/: test_approval_engine.py  test_config_models.py  test_llm_models.py
tests/extensions/: test_subagent_manager.py
tests/infrastructure/: test_notes_store.py  test_platform.py
tests/interfaces/: test_cli_render.py  test_events.py
tests/services/: test_llm_client.py  test_llm_diagnostics.py
(+200 files in other folders)
